add:facebook group

--- a/src/index.css
+++ b/src/index.css
@@ -1,55 +1,24 @@
 /* .bd-red{border: solid 2px red!important;}
 .bd-green{border: dashed 2px green!important;}
 .bd-yellow{border: solid 3px yellow!important;}
-.bd-blue{border: solid 1px blue!important;}    
- */
+.bd-blue{border: solid 1px blue!important;}    */
  
-/*  .loading-comp > .loading-comp-c1{
-   background: linear-gradient(-45deg, #e7e4e4, #e2e2e2);
-	background-size: 100% 100%;
-	animation: bumble 2s backwards infinite;
-}
-
- .loading-comp > .loading-comp-c2{
-  background: linear-gradient(-45deg, #e7e4e4, #e2e2e2);
-  background-size: 100% 100%;
-  animation: bumble-reverse 2s backwards infinite;
-}
-
-@keyframes bumble {
-	0% {
-
-    transform: translateX(0);
-		background-position: 0% 50%;
-	}
-	50% {
-    transform: translateX(6%);
-		background-position: 100% 50%;
-	}
-	100% {
-    transform: translateY(0);
-		background-position: 0% 50%;
-	}
-}
-@keyframes bumble-reverse {
-	0% {
-
-    transform: translateY(0);
-		background-position: 0% 50%;
-	}
-	50% {
-    transform: translateY(-6%);
-		background-position: 100% 50%;
-	}
-	100% {
-    transform: translateY(0);
-		background-position: 0% 50%;
-	}
-} */
 :root {
   --primary-color: #193D89;
   --second-color: #E41311;
   --third-color: #27BBE0;
+}
+::-webkit-scrollbar-track {
+  background-color: #eeeeee;
+}
+::-webkit-scrollbar {
+  width: 12px;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(190, 190, 197);
+  border-radius: 2px;
+
 }
 .unselectable {
   -webkit-touch-callout: none;
@@ -102,6 +71,14 @@
 }
 
 
+.showup-enter-active, .showup-leave-active {
+  transition: all .2s;
+
+}
+.showup-enter, .showup-leave-to /* .fade-leave-active em versões anteriores a 2.1.8 */ {
+  transition: all .2s;
+  opacity: 0;
+}
 .rollup-enter-active, .rollup-leave-active {
   transition: all .25s;
   transform: translateY(0);
